--- a/src/components/Table/Table.module.scss
+++ b/src/components/Table/Table.module.scss
@@ -1,4 +1,4 @@
-@import "src/design/base/color.scss";
+@import "../../../src/design//base/color";
 .tableWrapper {
   flex-direction: column;
   align-items: center;
@@ -78,7 +78,7 @@
 }
 
 .customTable th:hover {
-  background-color: $primary-dark;
+  background-color: $primary-color-dark;
   cursor: pointer;
 }
 
