--- a/src/layout/AppLayout/AppLayout.module.scss
+++ b/src/layout/AppLayout/AppLayout.module.scss
@@ -7,7 +7,7 @@
 }
 
 .header {
-  background: $primary-color;
+  background: $primary-color-dark;
   color: white;
   padding: 0 1rem;
   height: 56px;
@@ -74,7 +74,7 @@
 }
 
 .linkActive {
-  background: $primary-color;
+  background: $primary-color-dark;
   color: white;
 }
 
