--- a/src/pages/LogIn/LoginPage.module.scss
+++ b/src/pages/LogIn/LoginPage.module.scss
@@ -4,11 +4,11 @@
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background: $background-light;
+  background: $primary-color-dark;
 }
 
 .card {
-  background: $background-light;
+  background: $primary-color;
   padding: 2.5rem 3rem;
   border-radius: 12px;
   box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
